Fix dark mode

--- a/src/components/Toolbar.css
+++ b/src/components/Toolbar.css
@@ -21,6 +21,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 10px 10px 0px 10px;
+    transition: background-color 0.2s ease;
 }
 
 .tab {
@@ -29,6 +30,7 @@
     justify-content: space-between;
     padding: 4px 4px 2px 4px;
     border-radius: 5px 5px 0px 0px;
+    transition: background-color 0.2s ease;
 
 }
 
